background overflow fix

--- a/stylesheets/game_main.css
+++ b/stylesheets/game_main.css
@@ -13,7 +13,6 @@
   position: relative;
   width: 100vw;
   height: 100vh;
-  min-height: 300px;
 }
 
 .main__tree_bg1 {
